Bug 342352, set mHiddenWidget to null after it has been destroyed, r+sr=roc